# AdaptivMCP

./: .bandit  .coverage  .env.example  .gitignore  .limit_test_note  .pre-commit-config.yaml  ASSISTANT_HANDOFF.md  ASSISTANT_RULES.md  ASSISTANT_WORKFLOWS.md  CHANGELOG.md  CONNECTOR_DOCS_OVERVIEW.md  CONTRIBUTING.md  DUPLICATE_CODE_REPORT.md  Detailed_Tools.md  Dockerfile  FUNCTION_REFERENCE.md  GETTING_STARTED.md  HUMAN_AI_WORKFLOW_MANUAL.md  LICENSE  LICENSE.md  MCP_ERROR_CODES.md  Makefile  POLICY.md  PR_PUBLISHING_SCHEMA.md  PR_SCHEMA.md  PR_SCHEMA_GUIDE.md  ProofOfConcept.md  README.md  README.txt  README_connector.md  TOOL_SCHEMAS.json  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  claude_desktop_config.json  cli.py  controller_tool_map.md  coverage.json  detailed_tools.md  dev-requirements.txt  docker-compose.yml  (+17 more)
.github/: dependabot.yml
.mcp_tmp/: run_python_3a037b0fcafa46208e2550388f29628d.py  run_python_ab0fb93ba7b145a588c42c2b7db743f1.py
.venv-mcp/: .deps-dev-requirements.txt.sha256
assets/: index.html
docs/: ARCHITECTURE_AND_SAFETY.md  ASSISTANT_DOCS_AND_SNAPSHOTS.md  ASSISTANT_HAPPY_PATHS.md  CONTROLLER_PROMPT_V1.md  DISTRIBUTION.md  OPERATIONS.md  PR_PUBLISHING_SCHEMA.md  README.md  SELF_HOSTED_SETUP.md  SELF_HOSTING_DOCKER.md  TOOLING.md  UPGRADE_NOTES.md  WORKFLOWS.md  adaptiv_mcp_architecture_safety.md  adaptiv_mcp_happy_paths.md  adaptiv_mcp_hinting_logic.md  adaptiv_mcp_tool_payloads.md  all_actions.md  architecture_safety.md  chatgpt.md  hint-logic.md  safety-architecture.md  start_session.md  starter_tools.md  terminology.md  tool_robustness.md  (+3 more)
(+408 files in other folders)
