[project]
name = "chatgpt-mcp-github"
version = "1.0.0"
description = "Self-hosted Adaptiv Controller for GitHub MCP"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Joey Leopizzi" }]
dependencies = [
    "anyio>=4.7.0",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.0.0",
]
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "main", "extra_tools"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
